Fix whitespace issue

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ a:hover {
 }
 
 .post-container {
+  white-space: pre-wrap;
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
